Update cron job comment and commit message

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Daily Gold Price Update
 
 on:
   schedule:
-    - cron: '0 0 * * *' # প্রতিদিন রাত ১২টায় অটো চলবে
+    - cron: '0 0 * * *' # প্রতিদিন রাত ১২টায় অটো চলবে
   workflow_dispatch: # চাইলে আপনি নিজেও বাটন চেপে রান করতে পারবেন
 
 jobs:
@@ -29,6 +29,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
-          git add gold_updates.md
-          git commit -m "Daily Gold Price Update"
+          git add index.md
+          git commit -m "Daily Gold Price and News Update"
           git push
