--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,7 @@
-name: Gold Price 30m Auto Update
+name: Manual Gold Price Update
 
 on:
-  schedule:
-    # প্রতি ৩০ মিনিট পরপর রান করার কমান্ড
-    - cron: '*/30 * * * *' 
-  workflow_dispatch: # ম্যানুয়ালি রান করার অপশন
+  workflow_dispatch: # শুধু ম্যানুয়ালি রান হবে
 
 jobs:
   build:
@@ -31,5 +28,5 @@ jobs:
           git config --global user.name "GitHub Action"
           git config --global user.email "action@github.com"
           git add index.md
-          git commit -m "Auto Update: Gold Price and News (Every 30m)" || exit 0
+          git commit -m "Manual Update: Gold Price and News" || exit 0
           git push
